# jTOPMODEL

./: .gitignore  README.md  pyproject.toml
src/jtopmodel/: __init__.py  config.py  extractor.py  losses.py  model.py  parameters.py  postprocessor.py  preprocessor.py  runner.py
src/jtopmodel/calibration/: optimizer.py  parameter_manager.py  worker.py
tests/: test_registration.py
